Random Walk Dungeon

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     </style>
 </head>
 <body>
+  <!-- comment -->
 
 <script src="js/game.js", type = "module"></script>
-<script src ="js/DungeonGenerator.js", type = "module"></script>
+<script src ="js/dungeOn.js", type = "module"></script>
+<p id="demo"></p>
 
 </body>
 </html>
