--- a/dungeOn.html
+++ b/dungeOn.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>Infinite Skeleton</title>
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable=0, minimal-ui" />
-    <script src=//cdn.jsdelivr.net/npm/phaser@3.2.1/dist/phaser.js></script>
     <style type="text/css">
         body {
           paadding: 0px
@@ -23,8 +22,9 @@
 <body>
   <!-- comment -->
 
-<script src="js/game.js", type = "module"></script>
-<script src ="js/dungeOn.js", type = "module"></script>
+<script src ="js/dungeOn.js"></script>
+<p id="demo"></p>
+<button onclick="dungeOn(20, 20, 10, 10)">Try it</button>
 
 </body>
 </html>
