--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!-- comment -->
     
     <script src=/js/phaser.js></script> <!-- switch to min.js for publishing -->
+    <script src ="js/dungeOn.js"></script>
     <script src="js/playGame.js"></script>
     <script src="js/game.js"></script>
-    <!--<script src ="js/dungeOn.js", type = "module"></script>-->
 
 </body>
 </html>
