--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable=0, minimal-ui" />
     <style type="text/css">
         body {
-          padding: 0px,
+          padding: 0px;
           margin: 0;
         }
         canvas{
