--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <!-- comment -->
     
-    <script src=/js/phaser.js></script> <!-- switch to min.js for publishing -->
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.15.0/dist/phaser.js"></script>
     <script src ="js/dungeOn.js"></script>
     <script src="js/playGame.js"></script>
     <script src="js/game.js"></script>
